[gd_scene load_steps=5 format=3 uid="uid://dhcicj086k725"]

[ext_resource type="Script" uid="uid://oh22iqqgtwo6" path="res://scenes/battle_lost/battle_lost.gd" id="1_tckur"]
[ext_resource type="PackedScene" uid="uid://0ek8bcdoiphi" path="res://scenes/ui/party_ui.tscn" id="2_tckur"]

[sub_resource type="Gradient" id="Gradient_5xku6"]
colors = PackedColorArray(0.25098, 0.25098, 0.25098, 1, 0.492369, 0.165348, 0.173312, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_d75l8"]
gradient = SubResource("Gradient_5xku6")

[node name="BattleReward" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tckur")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_d75l8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Defeat"
horizontal_alignment = 1

[node name="RetryButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Retry"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Quit"

[node name="PartyUI" parent="MarginContainer/HBoxContainer" instance=ExtResource("2_tckur")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
alignment = 0
